2011-11-07  Dana Jansens  <danakj@chromium.org>

        Add cc-bugs group to watch changes in chromium graphics
        https://bugs.webkit.org/show_bug.cgi?id=71690

        Reviewed by James Robinson.

        * Scripts/webkitpy/common/config/watchlist:

2011-11-07  Balazs Ankes  <Ankes.Balazs@stud.u-szeged.hu>

        [NRWT] Parsing of test_expectations.txt should be agnostic to newline at end
        https://bugs.webkit.org/show_bug.cgi?id=70912

        Reviewed by Ojan Vafai.

        * Scripts/webkitpy/layout_tests/port/webkit.py: Add newline at the end of test_expectations.txt.
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py: Make up the test_test_expectations method for the updated webkit.py.

2011-11-07  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests: support --repeat-each feature from old-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=62199

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2011-11-07  Fady Samuel  <fsamuel@chromium.org>

        [Chromium] Rename WebView::scalePage to WebView::setPageScaleFactor to match WebCore
        https://bugs.webkit.org/show_bug.cgi?id=71485

        Reviewed by Darin Fisher.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::scalePageBy):
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::resetTestController):

2011-11-07  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Put the jsc binary in 'bin' instead of leaving it deep in the build tree

        Allows us to not package up the whole Source/JavaScriptCore directory for the
        buildbots.

        Reviewed-by Simon Hausmann.

        * BuildSlaveSupport/built-product-archive:
        * Scripts/webkitdirs.pm:
        (jscProductDir):
